# vibe-scaffold

./: README.md  pyproject.toml
vibe_scaffold/: cli.py
